# regroot

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: list_directories.rs  main.rs
