[package]
name = "groot-tree"
version = "0.2.1"
edition = "2021"
description = "Walk in thee directories"
authors = ["Community"]
documentation = "https://github.com/rodrigorvsn/groot"
license = "MIT"
keywords = ["cli", "tree"]
categories = ["cli", "tree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
